# arxiv-translator

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: app.py
app/static/: styles.css
app/templates/: pdf_list.j2  translate.j2
config/: api_keys.yml  configs.yml
notebook/: arxiv-translatorを逐次実行.ipynb
src/: file_utils.py  openai_chat.py  setup.py  tex_compiler.py  tex_translator_utils.py
src/arxiv_translator/: __init__.py  cli.py  config.py  file_utils.py  openai_chat.py  tex_compiler.py  tex_translator_utils.py  translator.py
templates/: prompt_en_to_ja.j2  tex_style_ja.j2
